--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 
   <div id="central_container">
-    <%= render "navigation" %>
+    <%= render partial: "nav/navigation" %>
 
     <div id="main">
      <p class="notice"><%= notice %></p>
