--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -36,5 +36,8 @@
   .field
     = f.label :min_dur_mins
     = f.text_field :min_dur_mins
+  .field
+    = f.label :tag_list, "Tags (separated by commas)"
+    = f.text_field :tag_list
   .actions
     = f.submit 'Save'
