corrected variable name

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,6 +1,6 @@
 %p#notice= notice
 
-- ordered_tasks.each do |task|
+- @ordered_tasks.each do |task|
   = render partial: 'task', locals: {task: task}
 
 New task:
