--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -19,6 +19,9 @@
     = f.label :parent
     = f.text_field :parent
   .field
+    = f.label :overall_imp
+    = f.text_field :overall_imp
+  .field
     = f.label :days_imp
     = f.text_field :days_imp
   .field
