--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,39 +1,8 @@
-%h1 Listing tasks
+My tasks:
 
-%table
-  %thead
-    %tr
-      %th Name
-      %th Notes
-      %th Due
-      %th Parent
-      %th Days imp
-      %th Weeks imp
-      %th Ever imp
-      %th Sib order
-      %th Exp dur mins
-      %th Min dur mins
-      %th
-      %th
-      %th
+- @ordered_tasks.each do |task|
+  = render partial: 'task', locals: {task: task}
 
-  %tbody
-    - @tasks.each do |task|
-      %tr
-        %td= task.name
-        %td= task.notes
-        %td= task.due
-        %td= task.parent
-        %td= task.days_imp
-        %td= task.weeks_imp
-        %td= task.ever_imp
-        %td= task.sib_order
-        %td= task.exp_dur_mins
-        %td= task.min_dur_mins
-        %td= link_to 'Show', task
-        %td= link_to 'Edit', edit_task_path(task)
-        %td= link_to 'Destroy', task, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
+New task:
 = link_to 'New Task', new_task_path
+
