slider sorta there

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
  *= require_tree ../../../vendor/assets/bower_components/jquery-ui/themes/base
  * these are resolved thanks to bower-rails:
  *= require bootstrap-sass-official
+ *= require seiyria-bootstrap-slider
  *
  * standard rails:
  *= require_tree .
