--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -23,10 +23,13 @@
     = f.text_field :overall_imp
   .field
     = f.label :days_imp
-  %input#days_imp.slider{"data-slider-min"=>"1", "data-slider-max"=>"10", "data-slider-step"=>"1", "data-slider-value"=>"3", "name"=>"task[days_imp]"}
-  %span#daysImpSliderLabel
-    Current Slider Value:
-    %span#daysImpSliderVal 3
+    %label{"for"=>"days_imp_amount"} Slider val:
+    %input{:type=>"text", :id=>"days_imp_amount", :name=>"task[days_imp]", :readonly => "readonly", :style => "border:0; color: #f6931f; font-weight:bold;"}
+    #days_imp_slider
+    -#  %input#days_imp.slider{"data-slider-min"=>"1", "data-slider-max"=>"10", "data-slider-step"=>"1", "data-slider-value"=>"3", "name"=>"task[days_imp]"}
+    -#  %span#daysImpSliderLabel
+    -#    Current Slider Value:
+    -#    %span#daysImpSliderVal 3
   .field
     = f.label :weeks_imp
     = f.text_field :weeks_imp
@@ -44,9 +47,7 @@
     = f.text_field :min_dur_mins
   .field
     = f.label :tag_list
-    %select#tag_select{"multiple"=>"multiple", "name"=>"task[tag_list]"}
-      - current_user.tags.each do |tag|
-        %option{"value"=>"#{tag.to_s}"}
-          = tag.to_s
+    = f.select :tag_list, options_for_select(current_user.tags), {}, {class: "tag_select", multiple: "multiple", style: "width: 25em;"}
+
   .actions
     = f.submit 'Save'
