--- a/app/views/tasks/split.html.haml
+++ b/app/views/tasks/split.html.haml
@@ -13,12 +13,14 @@
     = task_builder.label :parent
     = task_builder.text_field :parent
 
-  %ul#children
-  = task_builder.fields_for :children do |child_builder|
-    = content_tag_for :li, child_builder.object do
-      .nested-fields
-        .field
-          = child_builder.text_field :name
+  %ul#children{"data-update-url" => "#{sort_tasks_url}"}
+    = task_builder.fields_for :children do |child_builder|
+      = content_tag_for(:li, child_builder.object, class: "ui-state-default") do
+        .nested-fields
+          .field
+            = child_builder.label :name
+          .field
+            = child_builder.text_field :name
   .links
     = link_to_add_association 'add child', task_builder, :children
 
