got adding via return sorta working

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,8 @@
  *
  * from Bower:
  * this is weird and needs special treatment:
- *= require_tree ../../../vendor/assets/bower_components/jquery-ui/themes/base
+ * disabled...
+ * = require_tree ../../../vendor/assets/bower_components/jquery-ui/themes/base
  * these are resolved thanks to bower-rails:
  *= require bootstrap-sass-official
  *= require select2
