--- a/app/views/tasks/split.html.haml
+++ b/app/views/tasks/split.html.haml
@@ -13,22 +13,22 @@
     = task_builder.label :parent
     = task_builder.text_field :parent
 
+  / make fields_html and store in hidden input
+  - new_child = Task.new
+  - new_child.parent = @task
+  - new_child_fields_html = task_builder.fields_for(:children, new_child, child_index: new_child.object_id) do |child_builder|
+    - render("child_fields", f: child_builder)
+  - new_child_fields_html = new_child_fields_html.gsub("\n", "")
+  / data-new-child-fields-html is the html you'll need for each new child
+  / data-new-child-object-id is just an arbitrary starting string to be the element id of the new elements, temporarily
+  %span{style: "visibility: hidden", id: "fields_html_holder", "data-new-child-fields-html" => new_child_fields_html, "data-new-child-object-id" => new_child.object_id}
+
   %ul#children{"data-update-url" => "#{sort_tasks_url}"}
     = task_builder.fields_for :children do |child_builder|
-      = content_tag_for(:li, child_builder.object, class: "ui-state-default") do
-        .nested-fields
-          .field
-            = child_builder.label :name
-          .field
-            = child_builder.text_field :name, class: "subtask_name"
+      - render("child_fields", f: child_builder)
   .links
     /= link_to_add_association 'add child', task_builder, :children
-
-    - new_child = Task.new
-    - new_child.parent = @task
-    - fields_html = task_builder.fields_for(:children, new_child, child_index: new_child.object_id) do |child_builder|
-      - render("child_fields", f: child_builder)
-    = link_to("Add child", '#', class: "add_child", data: {id: new_child.object_id, fields: fields_html.gsub("\n", "")})
+    = link_to("Add child", '#', class: "add_child")
 
   .actions
     = task_builder.submit 'Save'
