--- a/app/views/tasks/_child_fields.html.haml
+++ b/app/views/tasks/_child_fields.html.haml
@@ -1,9 +1,9 @@
 = content_tag_for(:li, f.object, class: "handle", style: "border: 1px solid #ccc; background-color: #f0f0fa; margin: .5em; padding: .25em") do
   #form-group
     .row
-      .col-sm-1.col-md-1
-        %i.fa.fa-arrows-v
       .col-sm-4.col-md-2
-        = f.text_field :name, class: "subtask_name form-control blend", style: "width: 100%", placeholder: "Task name"
+        .float-left{style: "float: left"}
+          %i.icon-grid{style: "float: left; position: relative"}
+          = f.text_field :name, class: "subtask_name form-control blend", style: "width: 80%; float: left; position: relative", placeholder: "Task name"
       .col-sm-4.col-md-2
         = f.select :tag_list, options_for_select(current_user.tags, parent.tags), {}, {class: "tag_select", multiple: "multiple", style: "width: 100%"}
