--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -22,8 +22,8 @@
   %b Ever imp:
   = @task.ever_imp
 %p
-  %b Sib order:
-  = @task.sib_order
+  %b Position:
+  = @task.position
 %p
   %b Exp dur mins:
   = @task.exp_dur_mins
