--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -1,59 +1,76 @@
-= form_for @task do |f|
+
+= form_for(@task, class: "form-inline", role: "form") do |task_builder|
   - if @task.errors.any?
     #error_explanation
       %h2= "#{pluralize(@task.errors.count, "error")} prohibited this task from being saved:"
       %ul
         - @task.errors.full_messages.each do |msg|
           %li= msg
+  .field
+    = task_builder.label :name
+    = task_builder.text_field :name
+  - if view_detail_level > 5
+    - if @task.parent.present?
+      %div
+        = link_to 'parent', task_path(@task.parent), method: :get
+    .field
+      = task_builder.label :notes
+      = task_builder.text_area :notes
+    .field
+      = task_builder.label :due
+      = task_builder.datetime_select :due
+    .field
+      = task_builder.label :overall_imp
+      = task_builder.text_field :overall_imp
+    .field
+      = task_builder.label :days_imp
+      %label{"for"=>"days_imp_amount"} Slider val:
+      %input{:type=>"text", :id=>"days_imp_amount", :name=>"task[days_imp]", :readonly => "readonly", :style => "border:0; color: #f6931f; font-weight:bold;"}
+      #days_imp_slider
+      -#  %input#days_imp.slider{"data-slider-min"=>"1", "data-slider-max"=>"10", "data-slider-step"=>"1", "data-slider-value"=>"3", "name"=>"task[days_imp]"}
+      -#  %span#daysImpSliderLabel
+      -#    Current Slider Value:
+      -#    %span#daysImpSliderVal 3
+    .field
+      = task_builder.label :weeks_imp
+      = task_builder.text_field :weeks_imp
+    .field
+      = task_builder.label :ever_imp
+      = task_builder.text_field :ever_imp
+    .field
+      = task_builder.label :exp_dur_mins
+      = task_builder.text_field :exp_dur_mins
+    .field
+      = task_builder.label :min_dur_mins
+      = task_builder.text_field :min_dur_mins
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :notes
-    = f.text_area :notes
-  .field
-    = f.label :due
-    = f.datetime_select :due
-  .field
-    = f.label :parent
-    = f.text_field :parent
-  .field
-    = f.label :overall_imp
-    = f.text_field :overall_imp
-  .field
-    = f.label :days_imp
-    %label{"for"=>"days_imp_amount"} Slider val:
-    %input{:type=>"text", :id=>"days_imp_amount", :name=>"task[days_imp]", :readonly => "readonly", :style => "border:0; color: #f6931f; font-weight:bold;"}
-    #days_imp_slider
-    -#  %input#days_imp.slider{"data-slider-min"=>"1", "data-slider-max"=>"10", "data-slider-step"=>"1", "data-slider-value"=>"3", "name"=>"task[days_imp]"}
-    -#  %span#daysImpSliderLabel
-    -#    Current Slider Value:
-    -#    %span#daysImpSliderVal 3
-  .field
-    = f.label :weeks_imp
-    = f.text_field :weeks_imp
-  .field
-    = f.label :ever_imp
-    = f.text_field :ever_imp
-  .field
-    = f.label :sib_order
-    = f.text_field :sib_order
-  .field
-    = f.label :exp_dur_mins
-    = f.text_field :exp_dur_mins
-  .field
-    = f.label :min_dur_mins
-    = f.text_field :min_dur_mins
-  .field
-    = f.label :tag_list
-    / only problem is that new tags can't be added.
-    = f.select :tag_list, options_for_select(current_user.tags), {}, {class: "tag_select", multiple: "multiple", style: "width: 25em;"}
-    / doesn't seem to work; only one tag comes through.
-    / %select.tag_select{multiple: "multiple", name: "task[tag_list]", style: "width: 25em"}
-    /   - current_user.tags.each do |tag|
-    /     %option{"value"=>"#{tag.to_s}"}
-    /       = tag.to_s
+
+  - if defined?(show_chidren) && !show_children.nil?
+    / ****************************************
+    / DATA: NEW CHILD TASK FORM HTML
+    / make fields_html and store in hidden input
+    / ****************************************
+    - new_child = Task.new
+    - new_child.parent = @task
+    - new_child.tags = @task.tags # unclear if this will deep copy?
+    - new_child_fields_html = task_builder.fields_for(:children, new_child, child_index: new_child.object_id) do |child_builder|
+      - render("child_fields", f: child_builder, parent: @task)
+    - new_child_fields_html = new_child_fields_html.gsub("\n", "")
+    / data-new-child-fields-html is the html you'll need for each new child
+    / data-new-child-object-id is just an arbitrary starting string to be the element id of the new elements, temporarily
+    %span{style: "visibility: hidden", id: "rails_data_holder", "data-new-child-fields-html" => new_child_fields_html, "data-new-child-object-id" => new_child.object_id, "view-detail-level" => view_detail_level}
+    / ****************************************
+
+    #task_children_list_toggle
+      %i#task_children_list_toggle_off.fa.fa-caret-right{style: "display: #{show_children == true ? 'none' : 'inline-block'}"}
+      %i#task_children_list_toggle_on.fa.fa-caret-down{style: "visibility: #{show_children == true ? 'inline-block' : 'none'}"}
+      children
+    %ul#task_children_list.list-unstyled{"data-update-url" => "#{sort_tasks_url}"}
+      = task_builder.fields_for :children do |child_builder|
+        - render("child_fields", f: child_builder, parent: @task)
+    .links
+      /= link_to_add_association 'add child', task_builder, :children
+      = link_to("Add child", '#', class: "add_child")
 
   .actions
-    = f.submit 'Save'
+    = task_builder.submit 'Save'
