position not sib order

--- a/app/views/users/_task.html.haml
+++ b/app/views/users/_task.html.haml
@@ -8,7 +8,7 @@
     %td= task.days_imp
     %td= task.weeks_imp
     %td= task.ever_imp
-    %td= task.sib_order
+    %td= task.position
     %td= task.exp_dur_mins
     %td= task.min_dur_mins
     %td= link_to 'Show', task
