--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,7 +1,32 @@
-My tasks:
+Tags:
+%ul
+  %li
+    - if !defined?(@tag) || @tag.nil?
+      = link_to "all", tasks_path, style: "font-weight: bold"
+    - else
+      = link_to "all", tasks_path
+    [
+    = link_to "start", next_task_path
+    ]
+  - ActsAsTaggableOn::Tag.all.order(taggings_count: :desc).each do |tag|
+    %li
+      - if tag == @tag
+        = link_to tag.name, tasks_path(tag: tag.name), style: "font-weight: bold"
+      - else
+        = link_to tag.name, tasks_path(tag: tag.name)
+      [
+      = link_to "start", next_task_path(tag: tag.name)
+      ]
 
+
+- if defined?(@tag) && @tag.present?
+  %p= link_to "start", next_task_path(tag: @tag.name), style: "font-size: 2em"
+  %p #{@tag.name} tasks:
+- else
+  %p= link_to "start", next_task_path, style: "font-size: 2em"
+  %p all tasks:
 - @ordered_tasks.each do |task|
-  = render partial: 'task', locals: {task: task}
+  = render partial: 'single_task', locals: {task: task}
 
 New task:
 = link_to 'New Task', new_task_path
