--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -1,5 +1,5 @@
 %h1 New task
 
-= render 'form'
+= render partial: 'form', locals: {view_detail_level: 5, show_children: false}
 
 = link_to 'Back', tasks_path
