redid slider js to use attr not data; reformatted main form

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,8 @@
       #inner-central-container
         = render partial: "nav/navigation"
         #main
-          %p.notice= notice
-          %p.alert= alert
+          - if notice.present?
+            %p.notice= notice
+          - if alert.present?
+            %p.alert= alert
           = yield
