--- a/app/views/tasks/_child_fields.html.haml
+++ b/app/views/tasks/_child_fields.html.haml
@@ -1,5 +1,5 @@
 = content_tag_for(:li, f.object, class: "handle", style: "border: 1px solid #ccc; background-color: #f0f0fa; margin: .5em; padding: .25em") do
-  #form-group
+  .form-group
     .row
       .col-sm-4.col-md-2
         .float-left{style: "float: left"}
