--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
  * = require_tree ../../../vendor/assets/bower_components/jquery-ui/themes/base
  * these are resolved thanks to bower-rails:
  *= require bootstrap-sass-official
+ *= require bootstrap-datepicker
  *= require select2
  *= require font-awesome
  *
@@ -26,26 +27,115 @@
  *= require_self
  */
 
+/* *********************************
+overall page style
+********************************* */
+
+body {
+  //min-width: 320px; // hack for mobile safari
+  background-color: #fff;
+  color: #333;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 125%;
+  text-align: center;
+  margin: 0; // hack for browser consistency
+  padding: 0; // hack for browser consistency
+}
+
+
 #outer-central-container {
+  width: 100%;
+
   position: relative;
+  display: block;
+  background-color: #9f9;
+  text-align: center;
 }
 
 #inner-central-container {
+  width: 480px;
+
   position: relative;
+//  display: block;
   margin: 0 auto;
+  background-color: #def;
+//  text-align: center;
 }
 
-@media screen and (max-width: 768px) {
-  #inner-central-container {
-    width: 100%;
+#navigation {
+/*  float: right;
+  width: 480px;
+height: 100px;
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  background-color: #f99;
+  text-align: center;
+*/
+}
+
+/* *********************************
+screen sizes
+********************************* */
+
+$break-small: 480px;
+$break-large: 800px;
+
+@mixin respond-to($media) {
+  @if $media == small-screens {
+    @media only screen and (max-width: $break-small) { @content; }
+}
+  @else if $media == medium-screens {
+    @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) { @content; }
+  }
+  @else if $media == wide-screens {
+    @media only screen and (min-width: $break-large) { @content; }
   }
 }
 
-@media screen and (min-width: 768px) {
-  #inner-central-container {
-    width: 768px;
+
+@include respond-to(small-screens) {
+  body {
+    zoom: 0.66;
+    -moz-transform: scale(0.66);
+    -moz-transform-origin: 150% 0;
   }
 }
+@include respond-to(medium-screens) {
+  body {
+    zoom: 1.0;
+    -moz-transform: scale(1.0);
+    -moz-transform-origin: 100% 0;
+  }
+}
+@include respond-to(wide-screens) {
+  body {
+    zoom: 1.5;
+    -moz-transform: scale(1.5);
+    -moz-transform-origin: 67% 0;
+  }
+}
+
+
+/* *********************************
+custom icons
+********************************* */
+
+.icon-down-right-arrow {
+  display: block;
+/*  text-indent: -9999px; */
+  width: 12px;
+  height: 12px;
+  color: #777;
+  background: image-url("down_right_arrow.png");
+  background-size: 12px 12px;
+  margin: 2px;
+}
+
+/* *********************************
+draggable item
+********************************* */
 
 .handle {
   cursor: move;
@@ -60,6 +150,10 @@
   background-size: 12px 20px;
   margin: 6px 10px 5px 2px
 }
+
+/* *********************************
+edit-in-place hacks
+********************************* */
 
 input.blend:focus {
     border: 1px solid #ccc;
@@ -81,4 +175,7 @@ input.blend {
     background-color: #f5f5fd;
     border: none;
 }
+
+
+
 
