--- a/app/views/nav/_navigation.html.haml
+++ b/app/views/nav/_navigation.html.haml
@@ -1,21 +1,25 @@
-#navigation
-  - if @show_meme_search
-    = form_for :meme, url: memes_search_path, html: {method: 'GET', class: "meme_search_form"} do |f|
-      = f.text_field :tag, placeholder: "Enter any twitter hashtag"
-      = f.submit "Go"
-  - if @suppress_nav_auth != true
-    #auth_section
-      - if current_user
-        - already_displayed_sign_out = false
-        - all_providers.each do |provider_sym|
-          - if current_user.has_auth?(provider_sym)
-            %p.navbar-text
-              = render partial: 'nav/authstatus', locals: {provider: provider_sym, show_sign_out: !already_displayed_sign_out}
-              - already_displayed_sign_out = true
-        - all_providers.each do |provider_sym|
-          - if !current_user.has_auth?(provider_sym)
-            %p.navbar-text
-              = render partial: 'nav/authstatus', locals: {provider: provider_sym}
-      - else
-        %p.navbar-text= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), id: "sign_in", class: "navbar-link"
-        %p.navbar-text= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter), id: "sign_in", class: "navbar-link"
+%nav#navigation.navbar.navbar-default
+  .container-fluid
+    .navbar-header
+      %a.navbar-brand{href: root_path} Prioritizer
+    - if @show_meme_search
+      = form_for :meme, url: memes_search_path, html: {method: 'GET', class: "meme_search_form"} do |f|
+        = f.text_field :tag, placeholder: "Enter any twitter hashtag"
+        = f.submit "Go"
+    - if @suppress_nav_auth != true
+      %ul#auth_section.nav.navbar-nav.navbar-right
+        - if current_user
+          - at_least_one_auth_signed_in = false
+          - all_providers.each do |provider_sym|
+            - if current_user.has_auth?(provider_sym)
+              %li= render partial: 'nav/authstatus', locals: {provider: provider_sym}
+              - at_least_one_auth_signed_in = true
+          - all_providers.each do |provider_sym|
+            - if !current_user.has_auth?(provider_sym)
+              %li= render partial: 'nav/authstatus', locals: {provider: provider_sym}
+          - if at_least_one_auth_signed_in == true
+            %li= link_to "Sign out", logout_path, id: "sign_out", class: "navbar-lin navbar-right", method: :delete
+
+        - else
+          %p.navbar-text.navbar-right= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), id: "sign_in", class: "navbar-link"
+          %p.navbar-text.navbar-right= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter), id: "sign_in", class: "navbar-link"
