--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,10 +1,10 @@
 Tags:
 %ul
   %li
-    - tag_with_links("all", (!defined?(@tag) || @tag.nil?))
+    - tag_with_links("all", (!defined?(@tag) || @tag.nil?), false)
   - ActsAsTaggableOn::Tag.all.order(taggings_count: :desc).each do |tag|
     %li
-      - tag_with_links(tag, (tag == @tag))
+      - tag_with_links(tag, (tag == @tag), true)
 
 - if defined?(@tag) && @tag.present?
   %p= link_to "start", next_task_path(tag: @tag.name), style: "font-size: 2em"
