--- a/app/views/tasks/_single_task.html.haml
+++ b/app/views/tasks/_single_task.html.haml
@@ -9,7 +9,7 @@
 .row
   .col-xs-3 Actions:
   .col-xs-9
-    = link_to 'Edit', edit_task_path(task), class: "shortcut-link"
+    = link_to 'Edit', edit_task_path(task), id: "edit_link", class: "shortcut-link"
     = link_to 'Destroy', task, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: "shortcut-link"
     = link_to 'Finished', task_done_path(task), method: :post, class: "shortcut-link"
     = link_to 'Worked on it', task_worked_path(task), method: :post, class: "shortcut-link"
