--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
  * disabled...
  * = require_tree ../../../vendor/assets/bower_components/jquery-ui/themes/base
  * these are resolved thanks to bower-rails:
+ *= require jquery-mobile
  *= require bootstrap-sass-official
  *= require bootstrap-datepicker
  *= require clockpicker
