--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,15 +30,6 @@
 
 
 /* *********************************
-bootstrap overrides
-********************************* */
-
-h1, .h1, h2, .h2, h3, .h3 {
-  margin-top: 12px;
-  margin-bottom: 8px;
-}
-
-/* *********************************
 overall page style
 ********************************* */
 
@@ -73,7 +64,7 @@ body {
 
 #navigation {
 /*  float: right;
-  width: 320px;
+  width: 100%;
 height: 100px;
   position: relative;
   display: block;
@@ -127,6 +118,45 @@ $break-large: 720px;
 }
 
 
+/* *********************************
+bootstrap overrides
+********************************* */
+
+p, ol, ul, td {
+  font-size: 1.0rem;
+}
+
+h1, .h1, h2, .h2, h3, .h3 {
+  margin-top: 1.0rem;
+  margin-bottom: 0.7rem;
+}
+
+.navbar {
+  min-height: 2rem;
+}
+
+.navbar-text {
+  font-size: 0.75rem;
+}
+
+.navbar-brand {
+//  margin-left: 0;
+  margin-right: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.25rem;
+  padding: 0;
+  font-size: 1.5rem;
+  height: 2rem;
+}
+
+.navbar-nav > li > a {
+//  padding: 0.75rem 0.75rem;
+//  line-height: 1.0rem;
+}
+
+.nav > li > a {
+  padding: 0.75rem 1.25rem;
+}
 /* *********************************
 custom icons
 ********************************* */
